Amazon homepage/test, AddingToCart/test,AmazonTestRunner

--- a/Generic/src/main/secret.properties
+++ b/Generic/src/main/secret.properties
@@ -14,11 +14,11 @@ MYMONGODB.password
 
 -----cheapOair-----
 CheapOairEmail ="isratretomoni@yahoo.com"
-password = "Monika199%"
+CheapOairPassword = "Monika199%"
 
 ----amazon----
 AmazonEmail = isratretomoni@gmail.com
-Amazonpassword = monika1995
+AmazonPassword = monika1995
 
 
 
